--- a/Notebook/path/ed-donner_llm/week7/day3-4+training_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day3-4+training_ja.ipynb
@@ -6,21 +6,17 @@
     "id": "GHsssBgWM_l0"
    },
    "source": [
-    "# 製品価格を予測します\n",
+    "## 製品価格予測\n",
     "\n",
-    "## 3日目：トレーニング！\n",
+    "（講師は A100 を使用しているが T4 でも実行可能）\n",
     "\n",
-    "# 重要です私を読んでください!!\n",
+    "## 第7週 三日目：トレーニング！\n",
     "\n",
-    "以下の pip インストールを実行すると、FSSPECの互換性のないバージョンについて不平を言う pip からエラーが発生する可能性があります。\n",
+    "# 重要なメモ これを読んでください!\n",
     "\n",
-    "そのエラーを無視する必要があります！ FSSPECのバージョンは、Hugging Faceが必要とする適切なバージョンです。\n",
+    "以下の pip インストールを実行すると、FSSPECの互換性のないバージョンについて不平を言うPIPからエラーが発生する可能性があります。そのエラーを無視する必要があります！ FSSPECのバージョンは、Hugging Faceが必要とする適切なバージョンです。\n",
     "\n",
-    "ChatGptに尋ねると、FSSPECのより最近のバージョンをインストールすることをお勧めします。しかし、それは問題があるでしょう。  \n",
-    "\n",
-    "Hugging Faceは、ファイルシステムに関するあいまいなエラーでデータセットを後でロードできません。\n",
-    "\n",
-    "したがって、pip インストールは以下に表示されているように実行してください。エラーが発生した場合は、逆の方を見てください。"
+    "ChatGptに尋ねると、FSSPECのより最近のバージョンをインストールすることを推奨してきますが、しかし、それは問題があり、Hugging Faceは、ファイルシステムに関するあいまいなエラーでデータセットを後でロードできないので、pip インストールは以下に表示されているように実行してください。エラーが発生した場合は、逆の方を見てください。"
    ]
   },
   {
@@ -31,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "# ピップインストール\n",
+    "# pip install\n",
     "\n",
     "!pip install -q --upgrade torch==2.5.1+cu124 torchvision==0.20.1+cu124 torchaudio==2.5.1+cu124 --index-url https://download.pytorch.org/whl/cu124\n",
     "!pip install -q --upgrade requests==2.32.3 bitsandbytes==0.46.0 transformers==4.48.3 accelerate==1.3.0 datasets==3.2.0 peft==0.14.0 trl==0.14.0 matplotlib wandb"
@@ -51,20 +47,20 @@
     "import os\n",
     "import re\n",
     "import math\n",
-    "from tqdm import tqdm\n",
     "from datetime import datetime\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from google.colab import userdata\n",
     "from huggingface_hub import login\n",
+    "from datasets import load_dataset, Dataset, DatasetDict\n",
     "\n",
     "import torch\n",
     "import transformers\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, TrainingArguments, set_seed, BitsAndBytesConfig\n",
-    "from datasets import load_dataset, Dataset, DatasetDict\n",
-    "import wandb\n",
     "from peft import LoraConfig\n",
     "from trl import SFTTrainer, SFTConfig\n",
     "\n",
+    "import wandb\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -79,12 +75,12 @@
     "# 定数\n",
     "\n",
     "BASE_MODEL = \"meta-llama/Meta-Llama-3.1-8B\"\n",
-    "PROJECT_NAME = \"pricer\"\n",
-    "HF_USER = \"ed-donner\" # ここにHFの名前！\n",
+    "PROJECT_NAME = \"lite-pricer\" # \"pricer\"\n",
+    "HF_USER = \"nishi74322014\"\n",
     "\n",
     "# データ\n",
-    "DATASET_NAME = f\"{HF_USER}/pricer-data\"\n",
-    "# DATASET_NAME = \"ed-donner/pricer-data\"\n",
+    "DATASET_NAME = f\"{HF_USER}/lite-data\"\n",
+    "#DATASET_NAME = \"ed-donner/pricer-data\" # 後で件数を少なくできる。\n",
     "MAX_SEQUENCE_LENGTH = 182\n",
     "\n",
     "# HF Hubにモデルを保存するために名前\n",
@@ -92,7 +88,7 @@
     "PROJECT_RUN_NAME = f\"{PROJECT_NAME}-{RUN_NAME}\"\n",
     "HUB_MODEL_NAME = f\"{HF_USER}/{PROJECT_RUN_NAME}\"\n",
     "\n",
-    "# QLORAのハイパーパラメタ\n",
+    "# QLoRAのハイパーパラメタ\n",
     "LORA_R = 32        # r:Rank\n",
     "LORA_ALPHA = 64    # W′ = W + α⋅BA の α\n",
     "TARGET_MODULES = [\"q_proj\", \"v_proj\", \"k_proj\", \"o_proj\"]\n",
@@ -106,25 +102,29 @@
     "EPOCHS = 1\n",
     "\n",
     "# A100ボックスで16まで設定可能\n",
-    "BATCH_SIZE = 4\n",
+    "BATCH_SIZE = 2\n",
     "\n",
     "# GPUメモリが足りないときに「見かけ上のバッチサイズを大きくする」（→ 精度が安定）\n",
     "# 「見かけ上のバッチサイズ」= BATCH_SIZE * GRADIENT_ACCUMULATION_STEPS\n",
-    "GRADIENT_ACCUMULATION_STEPS = 1\n",
+    "GRADIENT_ACCUMULATION_STEPS = 2\n",
     "\n",
     "# 学習率\n",
     "LEARNING_RATE = 1e-4\n",
     "\n",
-    "LR_SCHEDULER_TYPE = 'cosine'\n",
+    "# 学習率のスケジュール・タイプ\n",
+    "LR_SCHEDULER_TYPE = 'cosine' # cosineカーブのように徐々に減少\n",
     "\n",
-    "WARMUP_RATIO = 0.03\n",
-    "# アルゴリズム\n",
-    "OPTIMIZER = \"paged_adamw_32bit\"\n",
+    "# 学習率ウォームアップ\n",
+    "WARMUP_RATIO = 0.03 # ステップ数の 3% をウォームアップに使う\n",
     "\n",
-    "# admin config- save_stepsはハブにアップロードする頻度であることに注意してください\n",
-    "# 私はこれを5000から2000に変更したので、より頻繁にセーブするようになりました\n",
+    "# 最適化アルゴリズム [paged_adamw_8bit, paged_adamw_32bit, adafactor]\n",
+    "# paged_adamw_32bit：高精度でA100など、paged_adamw_8bit：精度は下がるT4など、adafactor：メモリ使用量は最少、安定性は劣る\n",
+    "# LoRAやQLoRAなどの極端な軽量化が必要な時の最終手段。\n",
+    "OPTIMIZER = \"paged_adamw_8bit\" # \"paged_adamw_32bit\"\n",
     "\n",
-    "STEPS = 50\n",
+    "# 管理者設定 - SAVE_STEPS はハブへのアップロード頻度です。\n",
+    "# より頻繁に保存できるよう、5000 から 2000 に変更しました。\n",
+    "LOGGING_STEPS = 50\n",
     "SAVE_STEPS = 2000\n",
     "LOG_TO_WANDB = True\n",
     "\n",
@@ -139,6 +139,7 @@
    },
    "outputs": [],
    "source": [
+    "# HF Hubにアップロードするモデル名\n",
     "HUB_MODEL_NAME"
    ]
   },
@@ -150,10 +151,11 @@
    "source": [
     "# オプティマイザーの詳細\n",
     "\n",
-    "https://huggingface.co/docs/transformers/main/en/perf_train_gpu_one#optimizer-choice\n",
+    "https://huggingface.co/docs/transformers/main/en/perf_train_gpu_one#optimizers\n",
     "\n",
-    "最も一般的なのは、アダムまたはアダム（体重減衰のあるアダム）です。  \n",
-    "アダムは、以前の勾配のローリング平均を保存することにより、良好な収束を達成します。ただし、モデルパラメーターの数の順序の追加メモリフットプリントを追加します。\n"
+    "最も一般的なのは、AdamまたはAdamW（重減衰のあるAdam）です。\n",
+    "\n",
+    "Adamは、以前の勾配のローリング平均を保存することにより、良好な収束を達成します。ただし、モデルパラメタの数の順序の追加メモリフットプリントを追加します。"
    ]
   },
   {
@@ -162,13 +164,13 @@
     "id": "8JArT3QAQAjx"
    },
    "source": [
-    "### ログインして、フェイスと重みとバイアスを抱きしめます\n",
+    "### Hugging Face と Weights & Biases にログインします\n",
     "\n",
-    "まだHugging Faceアカウントをお持ちでない場合は、https://huggingface.coにアクセスしてサインアップしてトークンを作成します。\n",
+    "まだHugging Faceアカウントをお持ちでない場合は、https://huggingface.co にアクセスしてサインアップしてトークンを作成します。\n",
     "\n",
-    "次に、左のキーアイコンをクリックして、このノートブックの秘密を選択し、トークンとして値を持つ「hf_token」と呼ばれる新しい秘密を追加します。\n",
+    "次に、左のキーアイコンをクリックして、このノートブックのシークレットを選択し、トークンとして値を持つ `HF_TOKEN` と呼ばれる新しい秘密を追加します。\n",
     "\n",
-    "https://wandb.aiでweightsandbiaseについてこれを繰り返し、 `wandb_api_key`と呼ばれる秘密を追加します"
+    "https://wandb.ai で Weights & Biases についてこれを繰り返し、`WANDB_API_KEY` と呼ばれる秘密を追加する。"
    ]
   },
   {
@@ -179,8 +181,7 @@
    },
    "outputs": [],
    "source": [
-    "# Hugging Faceにログインします\n",
-    "\n",
+    "# Hugging Face Hub にプログラムからログイン\n",
     "hf_token = userdata.get('HF_TOKEN')\n",
     "login(hf_token, add_to_git_credential=True)"
    ]
@@ -193,15 +194,26 @@
    },
    "outputs": [],
    "source": [
-    "# ウェイトとバイアスにログインします\n",
+    "# Weights & Biasesにログイン\n",
     "wandb_api_key = userdata.get('WANDB_API_KEY')\n",
     "os.environ[\"WANDB_API_KEY\"] = wandb_api_key\n",
     "wandb.login()\n",
     "\n",
-    "# プロジェクトに対して記録するように重みとバイアスを構成します\n",
+    "# プロジェクトに対して記録するように重みとバイアスを構成\n",
     "os.environ[\"WANDB_PROJECT\"] = PROJECT_NAME\n",
     "os.environ[\"WANDB_LOG_MODEL\"] = \"checkpoint\" if LOG_TO_WANDB else \"end\"\n",
     "os.environ[\"WANDB_WATCH\"] = \"gradients\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "BBBvcJ679WjE"
+   },
+   "source": [
+    "# データをロード\n",
+    "\n",
+    "Hugging Faceにアップロードしたので、取得するのは簡単"
    ]
   },
   {
@@ -225,8 +237,12 @@
    },
    "outputs": [],
    "source": [
-    "# 代わりにトレーニングデータセットを20,000ポイントに削減したい場合は、この行を解除します。\n",
-    "# Train = Train.Select（Range（20000））"
+    "# トレーニングデータセットのポイント\n",
+    "print(len(train))\n",
+    "\n",
+    "# nishi74322014/lite-data を使用するので削減不要\n",
+    "# トレーニングデータセットを20,000ポイントに削減\n",
+    "#train = train.select(range(20000))"
    ]
   },
   {
@@ -237,6 +253,7 @@
    },
    "outputs": [],
    "source": [
+    "# wandb.init\n",
     "if LOG_TO_WANDB:\n",
     "  wandb.init(project=PROJECT_NAME, name=RUN_NAME)"
    ]
@@ -247,9 +264,9 @@
     "id": "qJWQ0a3wZ0Bw"
    },
    "source": [
-    "## 次に、トークン剤とモデルをロードします\n",
+    "## 次に、トークナイザとモデルをロード\n",
     "\n",
-    "モデルは「量子化」されています - 精度を4ビットに減らしています。"
+    "モデルを「量子化」し、精度を4ビットに減らす。"
    ]
   },
   {
@@ -260,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "# 適切な量子化を選択します\n",
+    "# 適切な量子化を選択\n",
     "\n",
     "if QUANT_4_BIT:\n",
     "  quant_config = BitsAndBytesConfig(\n",
@@ -284,7 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "# トークン剤とモデルをロードします\n",
+    "# トークナイザとモデルをロード\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
@@ -295,6 +312,8 @@
     "    quantization_config=quant_config,\n",
     "    device_map=\"auto\",\n",
     ")\n",
+    "\n",
+    "# （バッチ化などで）長さを揃えるために 「パディングトークンID」 が必要\n",
     "base_model.generation_config.pad_token_id = tokenizer.pad_token_id\n",
     "\n",
     "print(f\"Memory footprint: {base_model.get_memory_footprint() / 1e6:.1f} MB\")"
@@ -306,15 +325,20 @@
     "id": "9BYO0If4uWys"
    },
    "source": [
-    "# データコラーター\n",
+    "# DataCollator\n",
     "\n",
-    "トレーニング中に、製品の説明を予測するためにモデルを訓練しようとしていないことを保証することが重要です。彼らの価格だけ。\n",
+    "は、データの前処理（バッチ化）を行うクラスで、このトレーニングでは、\n",
     "\n",
-    "「価格は$」までのすべてがモデルにコンテキストを提供して次のトークンを予測するためにあるが、学習する必要はないことをトレーナーに伝える必要があります。\n",
+    "モデルが商品の説明含め予測するのではなく、価格のみを予測するようにトレーニングすることが重要になる。\n",
     "\n",
-    "トレーナーは、「価格は$」の後にトークンを予測するようにモデルに教える必要があります。\n",
+    "「Price is $」までの部分は、モデルが次のトークンを予測するためのコンテキストを提供するためのもので、\n",
     "\n",
-    "マスクを設定することでこれを行うための複雑な方法がありますが、幸運なことに、Hugging Faceは私たちのためにこれを大事にするための非常にシンプルなヘルパークラスを提供します。"
+    "- トレーナーに「`Price is $`までの部分を学習する必要はない」ことを伝える必要がある。\n",
+    "- また、トレーナーは、モデルに「`Price is $`の後のトークンを予測するよう」に教える必要がある。\n",
+    "\n",
+    "マスクを設定することでこれを行うための複雑な方法があるが、幸運なことに、\n",
+    "\n",
+    "Hugging Faceは私たちのためにこれを大事にするための非常にシンプルなヘルパークラスを提供します。"
    ]
   },
   {
@@ -325,6 +349,8 @@
    },
    "outputs": [],
    "source": [
+    "# 「Price is $」の後ろに続くテキストだけを学習対象にするように指示\n",
+    "\n",
     "from trl import DataCollatorForCompletionOnlyLM\n",
     "response_template = \"Price is $\"\n",
     "collator = DataCollatorForCompletionOnlyLM(response_template, tokenizer=tokenizer)"
@@ -338,13 +364,12 @@
    "source": [
     "# そして今\n",
     "\n",
-    "##トレーニング用の構成を設定します\n",
+    "## トレーニング用の構成を設定\n",
     "\n",
-    "2つのオブジェクトを作成する必要があります。\n",
+    "2つのオブジェクトを作成\n",
     "\n",
-    "Loraのハイパーパラメーターを備えたLoraconfigオブジェクト\n",
-    "\n",
-    "全体的なトレーニングパラメーターを備えたSFTCONFIG"
+    "- LoRAのハイパーパラメタを備えた LoraConfig\n",
+    "- 全体的なトレーニングパラメタを備えた SFTConfig"
    ]
   },
   {
@@ -355,54 +380,88 @@
    },
    "outputs": [],
    "source": [
-    "# まず、LORAの構成パラメーターを指定します\n",
+    "# まず、LoraConfigを設定\n",
     "\n",
     "lora_parameters = LoraConfig(\n",
+    "    # LoRAスケーリング係数α\n",
     "    lora_alpha=LORA_ALPHA,\n",
+    "    # LoRA適用部分のドロップアウト率。\n",
     "    lora_dropout=LORA_DROPOUT,\n",
+    "    # LoRA（の低ランク行列）のランク（次元）。\n",
     "    r=LORA_R,\n",
+    "    # LoRAでバイアス項をどのように扱うか。\n",
     "    bias=\"none\",\n",
+    "    # タスク種類：因果言語モデル（次単語予測）\n",
     "    task_type=\"CAUSAL_LM\",\n",
+    "    # LoRAを適用するモジュール\n",
     "    target_modules=TARGET_MODULES,\n",
     ")\n",
     "\n",
-    "# 次に、トレーニング用の一般的な構成パラメーターを指定します\n",
+    "# 次に、SFTConfigを設定\n",
     "\n",
     "train_parameters = SFTConfig(\n",
+    "    # トレーニング成果物保存ディレクトリ名。\n",
     "    output_dir=PROJECT_RUN_NAME,\n",
+    "    # 学習エポック数\n",
     "    num_train_epochs=EPOCHS,\n",
+    "    # 学習時のバッチサイズ（デバイスごと）\n",
     "    per_device_train_batch_size=BATCH_SIZE,\n",
+    "    # 評価時のバッチサイズ（デバイスごと）。\n",
     "    per_device_eval_batch_size=1,\n",
+    "    # 評価を行わない設定。通常 \"steps\" や \"epoch\" を指定可能。\n",
     "    eval_strategy=\"no\",\n",
+    "    # 見かけ上のバッチサイズを大きくする\n",
     "    gradient_accumulation_steps=GRADIENT_ACCUMULATION_STEPS,\n",
+    "    # 使用する最適化アルゴリズム\n",
     "    optim=OPTIMIZER,\n",
+    "    # モデルを何ステップごとに保存するか？\n",
     "    save_steps=SAVE_STEPS,\n",
+    "    # 保存するチェックポイントの最大数\n",
     "    save_total_limit=10,\n",
-    "    logging_steps=STEPS,\n",
+    "    # ログを出力するステップ間隔\n",
+    "    logging_steps=LOGGING_STEPS,\n",
+    "    # 学習率\n",
     "    learning_rate=LEARNING_RATE,\n",
+    "    # 重み減衰（L2正則化）\n",
     "    weight_decay=0.001,\n",
+    "    # 16ビット浮動小数点（半精度）演算を使わない。\n",
     "    fp16=False,\n",
-    "    bf16=True,\n",
+    "    # bfloat16での学習を有効化（T4は非対応）\n",
+    "    bf16=False, # True,\n",
+    "    # 勾配クリッピングの最大値（勾配爆発の防止）\n",
     "    max_grad_norm=0.3,\n",
+    "    # 総ステップ数をエポック数で制御\n",
     "    max_steps=-1,\n",
+    "    # ウォームアップステップの割合\n",
     "    warmup_ratio=WARMUP_RATIO,\n",
+    "    # バッチを同じ長さの入力にまとめ効率化\n",
     "    group_by_length=True,\n",
+    "    # 学習率スケジューラーのタイプ（説明済み\n",
     "    lr_scheduler_type=LR_SCHEDULER_TYPE,\n",
+    "    # Weights & Biases（W&B）へのログ送信の有効/無効\n",
     "    report_to=\"wandb\" if LOG_TO_WANDB else None,\n",
+    "    # W&B上などで使われるRUN_NAME\n",
     "    run_name=RUN_NAME,\n",
+    "    # モデルが処理する最大トークン長\n",
     "    max_seq_length=MAX_SEQUENCE_LENGTH,\n",
+    "    # 入力データのテキストが格納されているフィールド名\n",
     "    dataset_text_field=\"text\",\n",
+    "    # 保存タイミングの基準をステップ数に\n",
     "    save_strategy=\"steps\",\n",
+    "    # モデルを保存するたびにHubアップロード\n",
     "    hub_strategy=\"every_save\",\n",
+    "    # 学習済みモデルをHugging Face Hubにアップロード\n",
     "    push_to_hub=True,\n",
+    "    # Hugging Face Hubにアップロードする際のモデル名\n",
     "    hub_model_id=HUB_MODEL_NAME,\n",
+    "    # H非公開リポジトリとしてアップロード\n",
     "    hub_private_repo=True\n",
     ")\n",
     "\n",
-    "# そして今、監督された微調整トレーナーが微調整を実行します\n",
-    "# これらの2セットの構成パラメーターが与えられます\n",
-    "# TRLの最新バージョンは、ラベルに関する警告を示しています - この警告を無視してください\n",
-    "# しかし、良いトレーニング結果が見られない場合はお知らせください（損失が下がっています）。\n",
+    "# そして今、監督されたファインチューニング・トレーナーがファインチューニングを実行します。\n",
+    "# これらの2セットの構成パラメタ（LoraConfig、SFTConfig）を与える。\n",
+    "# TRLの最新バージョンは、ラベルに関する警告を示している - この警告を無視してください\n",
+    "# 良いトレーニング結果が見られない場合はお知らせください（損失が下がっています）。\n",
     "\n",
     "fine_tuning = SFTTrainer(\n",
     "    model=base_model,\n",
@@ -419,19 +478,25 @@
     "id": "ArjP7_OCQOin"
    },
    "source": [
-    "## 次のセルでは、微調整を開始します！\n",
+    "## 次のセルでは、ファインチューニングを開始します！\n",
     "\n",
-    "これはしばらくの間実行され、すべてのSave_Stepsステップをハブにアップロードします。\n",
+    "これはしばらくの間実行され、Save_Stepsステップで HF HUB にアップロードします。\n",
     "\n",
-    "しばらくすると、Googleはあなたのcolabを止めるかもしれません。無料プランを使用している人にとって、Googleがリソースが少ないときはいつでも発生する可能性があります。有料プランの場合は誰でも、最大24時間を与えることができますが、保証はありません。\n",
+    "しばらくすると、GoogleはあなたのColabを止めるかもしれません。\n",
     "\n",
-    "サーバーが停止した場合は、ここで私のコラブをたどって最後の保存から再開できます。\n",
+    "無料プランを使用している人にとって、Googleがリソースが少ないときはいつでも発生する可能性があります。\n",
     "\n",
-    "https://colab.research.google.com/drive/1qgtdvias_vwoby4uvi2vwsu0thxy8omo#scrollto = r_o04fkxmmt-\n",
+    "有料プランの場合は誰でも、最大24時間を与えることができますが、保証はありません。\n",
     "\n",
-    "このコラブを出力での最終実行で保存したので、例を見ることができます。トリックは、fine_tunedモデルをロードするときに「is_trainable」を設定する必要があることです。\n",
+    "サーバーが停止した場合は、ここで私のColabをたどって最後の保存から再開できる。\n",
     "\n",
-    "とにかく###それを念頭に置いて、これをキックオフしましょう！"
+    "https://colab.research.google.com/drive/1qGTDVIas_Vwoby4UVi2vwsU0tHXy8OMO#scrollTo=R_O04fKxMMT-\n",
+    "\n",
+    "このColabを出力での最終実行で保存したので、例を見ることができます。\n",
+    "\n",
+    "トリックは、fine_tunedモデルをロードするときに「is_trainable」を設定する必要があることです。\n",
+    "\n",
+    "### とにかく、それを念頭に置いて、これをキックオフしましょう！"
    ]
   },
   {
@@ -442,22 +507,14 @@
    },
    "outputs": [],
    "source": [
-    "# 微調整！\n",
+    "# ファインチューニング！\n",
     "fine_tuning.train()\n",
     "\n",
-    "# 微調整されたモデルを顔に抱きしめます\n",
+    "# 結果をHF HUBにプッシュ\n",
     "fine_tuning.model.push_to_hub(PROJECT_RUN_NAME, private=True)\n",
-    "print(f\"Saved to the hub: {PROJECT_RUN_NAME}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "32vvrYRVAUNg"
-   },
-   "outputs": [],
-   "source": [
+    "print(f\"Saved to the hub: {PROJECT_RUN_NAME}\")\n",
+    "\n",
+    "# W&Bに終了を通知\n",
     "if LOG_TO_WANDB:\n",
     "  wandb.finish()"
    ]
